# OWASP-top-10-LLM-assessment

./: .gitignore  CLAUDE.md  Output test.docx  README.md  app.py  assessment-methodology.md  example_document.txt  owasp_llm_top10.json  review_document.py
agent-reviewer/: README.md  app.py  review_agent.py
core/: agent.py  mapper.py  models.py
knowledge/: frameworks.py  regulations.py
llm-owasp/: .gitignore  README.md  __init__.py  __main__.py  auditor.py  claude_code.py  cli.py  collector.py  controls.py  plan.md  pyproject.toml  report.py
llm-owasp/docs/: LLM01_PromptInjection.md  LLM02_SensitiveInformationDisclosure.md  LLM03_SupplyChain.md  LLM04_DataAndModelPoisoning.md  LLM05_ImproperOutputHandling.md  LLM06_ExcessiveAgency.md  LLM07_SystemPromptLeakage.md  LLM08_VectorAndEmbeddingWeaknesses.md  LLM09_Misinformation.md  LLM10_UnboundedConsumption.md
llm-owasp/owasp_llm_audit/: auditor.py  collector.py  controls.py  report.py
llm-owasp/owasp_llm_audit/docs/: LLM01.md  LLM02.md  LLM03.md  LLM04.md  LLM05.md  LLM06.md  LLM07.md  LLM08.md  LLM09.md  LLM10.md
llm-owasp/tests/: test_auditor.py  test_collector.py  test_controls.py  test_report.py
output/: formatter.py
outputs/: hallucination-check-owasp-audit.md  owasp-agent-owasp-audit-v2.md  owasp-agent-owasp-audit.md  review-agent-owasp-audit.md  track1-owasp-audit.md
project_2026-03-24/: CLAUDE.md  app.py
prompts/: system_prompt.py
prototype/: CLAUDE.md  review_agent.py  test_agent.py
reports/: Key_review.txt  Output test_review.txt  example_document_review.txt  priority_report.txt
(+3 files in other folders)
